app/static/less/timer/mobile.less
// In case the mobile view doesn't want to listen to my declaration
// about fitting everything in 100% vw, make sure it doesn't scroll
// in any direction
.timer-container {
    overflow-y: hidden;
    overflow-x: hidden;
}

// At the broadest level of the mobile layout, the upper portion
// Contains the scramble, times, and timer
.upper_portion {
    height: 80%;
    width: 100%;
}

// At the broadest level of the mobile layout, the lower portion
// Contains the scramble preview
.lower_portion {
    height: 20%;
    width: 100%;

    .scramble_preview {
        height: 100%;
        width: 50%;
        padding: 5px;
        float: right;

        &.no_pointer {
            .btn_scramble_preview {
                color: white;
                border-color: white;
            }
        }
    }
}

#the_manual_entry {

    .form-group {
        margin-bottom: 0;
    }

}

.timer_text {
    font-size: 22vw;
    bottom: 1vh;

    &.fullscreen {
        position: fixed;
        width: 100%;
        height: 100%;
        left: 0;
        top: 0;
        z-index: 100;
        background-color: #65bcd4;
    }
}

.scramble_wrapper {
    height: 50%;
    width: 100%;
}

.scramble_area {
    width: 100%;
    height: 65%;

    padding: 5px;
}

.times {
    height: 25%;
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}

.single_time {
    text-align: center;
    width: 15%;
    margin: 0 1.5vw;
}

.timer_controls_wrapper {
    height: 50%;
    width: 100%;
}

.control_icon {
    margin: 0 2vw;
}

.btn-timer-control {
    height: 40px;
    width: 60px;
}

#the_mbld_entry {
    &.extended {
        height: 85%;

        #mbldEntryForm, #mbldEntryForm2, #mbldEntryForm3 {
            .form-group {
                margin-bottom: 0;
            }
            margin-bottom: 0;
        }
    }
}

.mods_area {
    &.reduced {
        height: 15%;
        width: 100%;
    }
}

